--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
     <div class="container">
         <!-- HEADING -->
    <div class="row">
-            <div class="col-lg-6" >
-                <div><img src="img/office.png" /></div>
+            <div class="col-lg-6" style="text-align:center;" >
+            <img src="img/office.png" width="100%" />
             </div>
       <div class="col-lg-5" >
         <div class="text-center mt-4">
