--- a/index.html
+++ b/index.html
@@ -93,9 +93,9 @@
              <b style="float:right;">1986-1992</b>
           </div>
               <div class="col-lg-7">
-             Universidad de Panam&aacute; / <i>Lic. Ing. Inform&aacute;tica</i><br/>
-             Instituto Fermin Naudeau / <i>Bachiller Ciencias</i><br/>
-             Domingo Faustino Sarmiento / <i>Primaria</i>
+             Universidad de Panam&aacute; / <i>Lic. Ing. Inform&aacute;tica</i>&nbsp; *(Work Graduation missing)<br/>
+             Instituto Fermin Naudeau / <i>Bachelor Science</i><br/>
+             Domingo Faustino Sarmiento / <i>primary school</i>
             
           </div>
       </div>
