--- a/index.html
+++ b/index.html
@@ -115,7 +115,19 @@
            <!--EMPTY SPACE-->
            </div> 
           <div class="col-lg-4" style="padding-bottom:20px;">
-           MAY 2009 - 2017 <i> (*current )</i> <br/>
+           since OCT 2018 - present <i> (*current )</i> <br/>
+            <strong>Noritex S.A.</strong>  
+          </div>  
+          <div class="col-lg-7">
+          Development & Transformation of suite of software from .net to python (web envinroment). Code optimization.
+          <i>&nbsp;&nbsp;>>&nbsp; .NET, PYTHON,FLASK ,GUNICORN,NGINX,IIS,MSSQL,GIT.</i><hr>
+          </div>
+            
+          <div class="col-lg-1">
+           <!--EMPTY SPACE-->
+           </div> 
+          <div class="col-lg-4" style="padding-bottom:20px;">
+           MAY 2009 - OCT 2018 <br/>
             <strong>Panasonic Latin America</strong>  
           </div>  
           <div class="col-lg-7">
