--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
           <div class="text-heading text-muted text-lg">About Me:</div>
           <h1 class="my-2">Ismael B. Valderrama M.</h1>
           <div class="text-heading text-muted text-lg"> C.V. updated
-            <strong> July 2018</strong>&nbsp; <a href="vendor/HojaDeVida2018.pdf" target="_blank">(see print versi&oacute;n &nbsp;<img src="img/icon_pdf.png"/>)</a></div>
+            <strong> July 2018</strong></div>
        </div>
       </div>
         <div class="col-lg-1" >
